# haggle

./: .hgignore  Android.mk  ChangeLog  Doxyfile.in  Makefile.am  README  configure.ac
android/: Android.mk  Makefile.am  README  install_haggle.sh  make_install_package.sh  remount_dev.sh
android/Haggle/: Android.mk  AndroidManifest.xml  Makefile.in  build.xml  proguard.flags
android/Haggle/jni/: Android.mk  Application.mk
android/LuckyMe/: Android.mk  AndroidManifest.xml  Makefile.in  build.xml  local.properties
android/LuckyMe/jni/: Android.mk
android/LuckyMe/res/layout/: main.xml
android/LuckyMe/res/raw/: test.txt
android/LuckyMe/res/values/: strings.xml
android/PhotoShare/: .classpath  .project  Android.mk  AndroidManifest.xml  Makefile.in  README  build.properties  build.xml  proguard.flags
android/PhotoShare/res/layout/: camera.xml  (+4 more)
android/device-files/: adhoc.sh
android/extlibs/: build.sh
android/extlibs/jni/: Android.mk  Application.mk
android/libhaggle/: Android.mk  org.haggle.xml
extlibs/libxml2-2.6.31/: Android.mk
extlibs/openssl-0.9.8j/: Makefile.iphone
extlibs/sqlite-3.6.6.2/: Makefile.am
extlibs/sqlite-3.7.0/: Makefile.am
iphone/: iphone-crosscompile.sh
macosx/Haggle.xcodeproj/: project.pbxproj
resources/: config.xml
src/: Makefile.am
src/bbs/: hagglebbs.cpp
src/client/: Makefile.am  haggle-cli.c
src/clitool/: Android.mk  Makefile.am  clitool.cpp  prng.cpp  prng.h
src/filedrop/: Makefile.am  filedrop.c  filedropMacOSX.c
src/hagglekernel/: Address.cpp  Address.h  Android.mk  ApplicationManager.cpp  ApplicationManager.h  Attribute.cpp  Attribute.h  BenchmarkManager.cpp  BenchmarkManager.h  Bloomfilter.cpp  Bloomfilter.h  Certificate.cpp  Certificate.h  Connectivity.cpp  Connectivity.h  ConnectivityBluetooth.cpp  ConnectivityBluetooth.h  ConnectivityBluetoothLinux.cpp  ConnectivityBluetoothLinux.h  ConnectivityBluetoothMacOSX.cpp  ConnectivityBluetoothMacOSX.h  ConnectivityBluetoothWindowsMobile.cpp  ConnectivityBluetoothWindowsMobile.h  ConnectivityBluetoothWindowsMobileWIDCOMM.cpp  ConnectivityBluetoothWindowsMobileWIDCOMM.h  ConnectivityBluetoothWindowsXP.cpp  ConnectivityBluetoothWindowsXP.h  ConnectivityEthernet.cpp  ConnectivityEthernet.h  ConnectivityInterfacePolicy.cpp  ConnectivityInterfacePolicy.h  ConnectivityLocal.cpp  ConnectivityLocal.h  ConnectivityLocalAndroid.cpp  ConnectivityLocalAndroid.h  ConnectivityLocalLinux.cpp  ConnectivityLocalLinux.h  ConnectivityLocalMacOSX.cpp  ConnectivityLocalMacOSX.h  ConnectivityLocalWindowsMobile.cpp  (+108 more)
src/libcpphaggle/: Android.mk  Heap.cpp  Makefile.am  Mutex.cpp  Reference.cpp  Signal.cpp  String.cpp  Thread.cpp  Timeval.cpp  Watch.cpp
src/libhaggle/: Android.mk  Makefile.am  attribute.c  dataobject.c  debug.c  debug.h  interface.c  ipc.c  metadata.c  metadata.h  metadata_xml.c  metadata_xml.h  node.c  platform.c
src/libhaggle/include/libhaggle/: attribute.h  dataobject.h  debug.h  error.h  haggle.h  interface.h  ipc.h  list.h  node.h  platform.h
src/libhaggle/jni/: Android.mk  Makefile.am  README
src/libhaggle/jni/java/org/haggle/: Attribute.java  DataObject.java  EventHandler.java  Handle.java  Interface.java  Makefile.am  Node.java  TestApp.java
src/libhaggle/jni/native/: Android.mk  Makefile.am  common.c  common.h  javaclass.c  org_haggle_DataObject.c  org_haggle_DataObject.h  org_haggle_Handle.c  org_haggle_Handle.h  org_haggle_Node.c  org_haggle_Node.h
src/logcollector/: Makefile.am  logcollector.cpp
src/luckyMe/: Android.mk  Makefile.am  luckyMe.cpp  luckyme.c  luckyme.h
src/proxy/: Makefile.am  hagglepop.cpp  haggleproxy.cpp  hagglesmtp.cpp  mmpd.cpp  popd.cpp  popserver.cpp  smtpd.cpp  smtpserver.cpp  thread.cpp  thread.h
src/utils/: Makefile.am  bloomfilter.c  bloomfilter.h  counting_bloomfilter.c  counting_bloomfilter.h  haggleutils.h  prng.c  thread.c  thread.h  utils.c  utils.h
src/webserver/: Makefile.am  webserver.cpp
testsuite/: Makefile.am  hagglemain.cpp  testsuiteWindows.cpp
testsuite/test_Queue/: Makefile.am
testsuite/test_dObj/: Makefile.am
testsuite/test_kernel/: largedo.cpp  multipleapp.cpp  singleapp.cpp
testsuite/test_libcpphaggle/: Makefile.am  refcount.cpp
testsuite/test_metadata/: Makefile.am
testsuite/test_security/: certificate.cpp
testsuite/test_utils/: Makefile.am  bloom.cpp  bloom_count.cpp
windows/Haggle/: Haggle.sln
windows/Haggle/Haggle/: Haggle.vcproj
windows/MailProxy/: MailProxy.sln
windows/MailProxy/MailProxy/: MailProxy.vcproj
windows/OpenSSL/Crypto/: Crypto.vcproj
windows/WebServer/WebServer/: WebServer.vcproj
windows/haggleutils/haggleutils/: haggleutils.vcproj
windows/libcpphaggle/: libcpphaggle.vcproj
windows/libhaggle/libhaggle/: libhaggle.vcproj
windows/libxml2/libxml2/: libxml2.vcproj
windows/sqlite3/sqlite3/: sqlite3.vcproj
windows/testsuite/hagglekernel/: hagglekernel.vcproj
windows/testsuite/testsuite/: testsuite.vcproj
winmobile/Haggle/: Haggle.sln  Haggle.vcproj  TrayNotifier.cpp  UUExperimentSetup.cpp  WIDCOMMBluetooth.cpp  WIDCOMMBluetooth.h  WindowsWiFiUtils.h
winmobile/HaggleInstaller/: HaggleInstaller.sln  HaggleInstaller.vddproj
winmobile/LibHaggleCS/: IPC.cs  Node.cs
winmobile/LuckyMe/: LuckyMe.sln
winmobile/LuckyMe/LuckyMe/: LuckyMe.cs  LuckyMeLib.cs  MainWindow.cs  NeighborWindow.cs  TestControlWindow.Designer.cs  TestControlWindow.cs
winmobile/LuckyMe/LuckyMeLib/: LuckyMeLib.vcproj
winmobile/MailProxy/: MailProxy.sln  MailProxy.vcproj
winmobile/OpenSSL/Compat/: time.c
winmobile/OpenSSL/Crypto/: Crypto.vcproj
winmobile/PhotoShare/: MainWindow.cs  PhotoShare.cs  PhotoShare.csproj  PhotoShare.sln
winmobile/WebServer/: WebServer.sln  WebServer.vcproj
winmobile/haggleutils/: haggleutils.sln  haggleutils.vcproj
winmobile/libcpphaggle/: libcpphaggle.vcproj
winmobile/libhaggle/: libhaggle.sln  libhaggle.vcproj
winmobile/libxml2/: libxml2.vcproj
winmobile/sqlite3/: sqlite.vcproj
winmobile/testsuite/: testsuite.sln
winmobile/testsuite/hagglekernel/: hagglekernel.vcproj
winmobile/testsuite/testsuite/: testsuite.vcproj
(+30 files in other folders)
